# tantivy

./: Cargo.toml
examples/: pre_tokenized_text.rs  working_with_json.rs
src/: error.rs  lib.rs
src/core/: index.rs
src/directory/: directory.rs  directory_lock.rs  footer.rs  managed_directory.rs  mod.rs  read_only_source.rs  static_directory.rs
src/postings/compression/: mod.rs
src/query/: bm25.rs  mod.rs  regex_query.rs  weight.rs
src/query/query_parser/: query_grammar.rs  query_parser.rs
src/query/term_query/: term_scorer.rs  term_weight.rs
src/reader/: mod.rs
src/termdict/: termdict.rs
wasm/: Cargo.toml  Readme.md  todo.org
wasm/src/: lib.rs
