[package]
name = "tantivy-wasm"
version = "0.1.0"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]

[dependencies]
tantivy = { path="../", default-features = false }

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"